implement message api

--- a/public/index.html
+++ b/public/index.html
@@ -14,20 +14,8 @@
 				url = "ws://localhost:8080/api/message/ws";
 				ws = new WebSocket(url);
 
-				send = function(data) {
-					$("#message").append((new Date())+ " ==> "+data+"\n");
-					ws.send(data);
-				}
-
 				ws.onmessage = function(msg) {
-					$("#message").append((new Date())+ " <== "+msg.data+"\n");
-        			console.log(msg);
-				}
-
-				ws.onopen = function() {
-					setInterval(function(){
-						send("ping")
-					}, 1000)
+					$("#message").append(msg.data + "\n");
 				}
 			})()
 		</script>
